[tool.poetry]
name = "eospyo"
version = "0.5.1"
description = "Interact with EOSIO blockchain networks"
authors = ["Edson <eospyo@facings.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
httpx = "^0.19.0"
ueosio = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.6.0"
pytest-httpx = "^0.13.0"
pytest-timeout = "^1.4.2"
pytest-rerunfailures = "^10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=eospyo"
testpaths = ["tests/unit"]
log_level = "DEBUG"

[tool.black]
line-length = 79

[tool.pydocstyle]
match_dir = '^(?!tests)[^\.].+$'
