[tool.poetry]
name = "eospyo"
version = "0.6.1"
description = "Interact with EOSIO blockchain networks"
authors = ["Edson <eospyo@facings.io>"]
homepage = "https://github.com/FACINGS/eospyo"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
httpx = ">=0.22"
ueosio = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-isort = "^4.1.1"
flake8-docstrings = "^1.6.0"
pytest-timeout = "^2.0.1"
pytest-rerunfailures = "^10.2"
pytest-httpx = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv --cov-report=term-missing --cov=eospyo"
testpaths = ["tests/unit"]
log_level = "DEBUG"

[tool.black]
line-length = 79

[tool.pydocstyle]
match_dir = '^(?!tests)[^\.].+$'
